
2005-08-17  Timothy Brownawell  <tbrownaw@gmail.com>

	* sanity.cc (gasp()): When catching an error from dumping a MM'd
	variable, do not discard output generated prior to the error. This
	way, at least the header line (function name, file, line no.) is
	printed.
	* change_set.cc: write_insane_change_set: new function to write a
	change set without sanity checking it, now used by dump().

2005-08-17  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	* unix/process.cc: missing include
	* m4/fexceptions.m4, configure.ac, Makefile.am: remove hardcoded
	-fexceptions in CFLAGS and add it only if compiler doesn't freak
	out.

2005-08-17  Nathaniel Smith  <njs@pobox.com>

	* work.cc (build_additions): Tweak wording.

2005-08-17  Nathaniel Smith  <njs@pobox.com>

	* netsync.cc: Add IANA port assignment to the todo list.

2005-08-17  Nathaniel Smith  <njs@pobox.com>

	* unix/process.cc (make_executable): Open the fd read-only, avoids
	problems with read-only files, and a writeable fd doesn't seem to
	be necessary to change permission bits.

2005-08-17  Nathaniel Smith  <njs@pobox.com>

	* unix/process.cc (is_executable, make_executable): When reporting
	an error in a syscall, include the actual error message.

2005-08-17  Nathaniel Smith  <njs@pobox.com>

	* lua.cc (dump_stack): New function.
	(Lua::fail): New method; use above.
	(get, get_fn, get_tab, get_str, get_num, get_bool, extract_str)
	(extract_int, extract_double, extract_bool, begin, next, pop): Use
	it, to give better logging.
	
2005-08-17  Nathaniel Smith  <njs@pobox.com>

	* Makefile.am (lib3rdparty_a_CFLAGS): Build 3rd party C code with
	-fexceptions.

2005-08-17  Matthew Gregan  <kinetik@orcon.net.nz>

	* win32/process.cc: Slightly smarter argv->cmdline munging.
	* std_hooks.lua: Merge hooks for TortoiseMerge (part of
	TortoiseSVN).

2005-08-17  Nathaniel Smith  <njs@pobox.com>

	* lua.cc (lua_hooks): Re-enable panic thrower, we no longer
	support Lua 4.

2005-08-16  Nathaniel Smith  <njs@pobox.com>
